[gd_scene format=3 uid="uid://dwucurqrvby08"]

[ext_resource type="Theme" uid="uid://ddwm0nvjciyk4" path="res://assets/global_theme.tres" id="1_5tqvs"]
[ext_resource type="Script" uid="uid://6kceoo3mtftb" path="res://addons/diablo_huma_studio/db_manager/visual_editors/main_menu/dbm_main_menu.gd" id="2_cpwkb"]

[node name="MainMenu" type="Control" unique_id=1800616730]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 800.0
theme = ExtResource("1_5tqvs")
script = ExtResource("2_cpwkb")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=975124833]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1933620732]
layout_mode = 2

[node name="CreateDataTypeButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1040469240]
layout_mode = 2
text = "ADD DATA TYPE"

[node name="CreateDataButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1711994482]
layout_mode = 2
text = "ADD DATA"

[node name="ViewDataTableButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=673617491]
layout_mode = 2
text = "VIEW DATA TABLE"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateDataTypeButton" to="." method="_on_create_data_type_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateDataButton" to="." method="_on_create_data_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ViewDataTableButton" to="." method="_on_view_data_table_button_pressed"]
